--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "test:integration": "jest --testPathPattern=tests/integration",
     "test:e2e": "jest --testPathPattern=tests/e2e",
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
+    "test:s3": "node scripts/testS3.js",
     "db:migrate": "sequelize-cli db:migrate",
     "db:seed": "sequelize-cli db:seed:all",
     "db:reset": "sequelize-cli db:drop && sequelize-cli db:create && sequelize-cli db:migrate && sequelize-cli db:seed:all",
