Update package.json with new dependencies and improve server error handling. Refactor file and folder controllers for better structure and clarity, including updates to S3 key generation and folder tree building. Enhance file and folder routes with new statistics endpoints and adjust Swagger documentation for accuracy.

--- a/backend/package.json
+++ b/backend/package.json
@@ -44,62 +44,63 @@
   "author": "Cloud Storage Team",
   "license": "MIT",
   "dependencies": {
+    "archiver": "^6.0.1",
     "aws-sdk": "^2.1490.0",
+    "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
+    "connect-redis": "^7.1.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.3",
     "express-rate-limit": "^7.1.5",
+    "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
+    "file-type": "^18.7.0",
     "helmet": "^7.1.0",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
+    "mime-types": "^2.1.35",
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
     "nodemailer": "^6.9.7",
+    "redis": "^4.6.10",
     "sequelize": "^6.35.1",
     "sequelize-cli": "^6.6.2",
+    "sharp": "^0.32.6",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
+    "unzipper": "^0.10.14",
     "uuid": "^9.0.1",
-    "winston": "^3.11.0",
-    "sharp": "^0.32.6",
-    "redis": "^4.6.10",
-    "ioredis": "^5.3.2",
-    "express-session": "^1.17.3",
-    "connect-redis": "^7.1.0",
-    "express-fileupload": "^1.4.3",
-    "file-type": "^18.7.0",
-    "mime-types": "^2.1.35",
-    "archiver": "^6.0.1",
-    "unzipper": "^0.10.14"
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.8",
     "@types/node": "^20.8.10",
     "@types/supertest": "^2.0.16",
+    "chai": "^4.3.10",
+    "chai-as-promised": "^7.1.1",
+    "cross-env": "^7.0.3",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-jest": "^27.4.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.0.1",
-    "jest": "^29.7.0",
-    "nodemon": "^3.0.2",
-    "prettier": "^3.0.3",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.1.1",
-    "husky": "^8.0.3",
-    "lint-staged": "^14.0.1",
-    "cross-env": "^7.0.3",
     "faker": "^6.6.6",
+    "husky": "^8.0.3",
+    "jest": "^29.7.0",
+    "lint-staged": "^14.0.1",
     "mock-aws-s3": "^4.0.2",
     "nock": "^13.3.0",
+    "nodemon": "^3.0.2",
+    "prettier": "^3.0.3",
     "sinon": "^17.0.1",
-    "chai": "^4.3.10",
-    "chai-as-promised": "^7.1.1"
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1"
   },
   "engines": {
     "node": ">=16.0.0"
